test/compilable/diag4479.d
// REQUIRED_ARGS: compilable/imports/fail4479.d
module diag4479;
import imports.fail4479;
void main() { }
